[package]
name = "assigner"
version = "0.1.0"
authors = ["Lukas Joswiak <ljoswiak@cs.washington.edu>", "jtjohn24 <jtjohn24@cs.washington.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
simple_logger = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
